# orbit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  display.py  orbit
cfg/: earth.yml  solar.yml  travel.yml
include/: Body.h  Params.h  Parser.h  System.h
include/indicators/: indicators.h
include/orbit/: Body.h  Params.h  Parser.h  System.h
src/: Body.cpp  Parser.cpp  System.cpp  main.cpp
